------------------------------------------------------------------------
r1188 | gaser | 2017-09-24 16:26:25

Changed paths:
M       CAT12-Manual.docx
M       CAT12-Manual.pdf
M       CHANGES.txt

Changed: Updated CAT12 manual.

------------------------------------------------------------------------
r1187 | gaser | 2017-09-15 16:06:21 +0200 (Fr, 15 Sep 2017) | 9 lines

Changed paths:
M       CAT12-Manual.docx
M       CAT12-Manual.pdf
M       CHANGES.txt
M       cat_stat_polynomial.m
M       html/cat_starting.html

Changed: Updated CAT12 manual and some help text.

------------------------------------------------------------------------
r1186 | gaser | 2017-09-14 16:58:48 +0200 (Do, 14 Sep 2017) | 12 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_batch_cat.m
M       cat_batch_long.m
M       cat_defaults.m
M       cat_system.m
M       html/cat.html

(1) Fixed: Batch mode is now correctly using defined default files.
(2) Changed: Updated comments in cat_defaults.m

------------------------------------------------------------------------
r1185 | gaser | 2017-09-13 17:02:47 +0200 (Mi, 13 Sep 2017) | 20 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_io_FreeSurfer.m
M       cat_surf_results.m
M       cat_vol_ROIval.c
M       cat_vol_downcut.c
M       cat_vol_eidist.c
M       cat_vol_eikonal3.c
M       cat_vol_genus0.c
M       cat_vol_gradient3.c
M       cat_vol_localstat.c
M       cat_vol_median3.c
M       cat_vol_simgrow.c
M       html/cat.html

(1) Changed: Updated interanl function names where vbm_ was still used.
(2) Fixed: Added warning if no hemipshere information could be found for 
    cat_surf_results.m

------------------------------------------------------------------------
r1184 | dahnke | 2017-09-08 19:02:40 +0200 (Fr, 08 Sep 2017) | 6 lines

Changed paths:
M       CHANGES.txt
M       cat_run_job_APP_final.m

(1) Fixed:  Corrected bug in cat_run_job1070.
